--- a/css/metro-bootstrap.css
+++ b/css/metro-bootstrap.css
@@ -2639,7 +2639,7 @@ a {
   outline: 1px #999999 dotted !important;
 }
 .metro .input-control.switch input[type="checkbox"]:checked ~ .check {
-  background: #008287;
+  background: #00A255;
 }
 .metro .input-control.switch input[type="checkbox"]:checked ~ .check:after {
   left: auto;
