Don't add anterior version of jquery within a file tabarnak

--- a/css/metro-bootstrap.css
+++ b/css/metro-bootstrap.css
@@ -45,6 +45,33 @@ a:active,
   outline: 0;
 }
 //ADDED BY PL FROM FM
+    #uploadform form{
+    opacity: 0;
+    -webkit-transition: opacity 0.5s ease-in;
+    -moz-transition: opacity 0.5s ease-in;
+    -o-transition: opacity 0.5s ease-in;
+    -ms-transition: opacity 0.5s ease-in;
+    transition: opacity 0.5s ease-in;
+    }
+    #uploadform form.load {
+    opacity: 1;
+    }
+
+    .footer, .push {
+    height: 100px; /* .push must be the same height as .footer */
+    }
+.ui-autocomplete {
+    max-height: 200px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+    /* add padding to account for vertical scrollbar */
+    padding-right: 20px;
+}
+
+* html .ui-autocomplete {
+    height: 200px;
+}
 a { 
     text-decoration:none; 
     color:#00c6ff;
