more mods on banners -FIXED, now resizable

--- a/css/metro-bootstrap.css
+++ b/css/metro-bootstrap.css
@@ -63,6 +63,7 @@ a:active,
       background-position: center center, center top;
       background-repeat: no-repeat;
       padding-top: 160px;
+      min-width: 720px;
     }
 
 
