--- a/css/metro-bootstrap.css
+++ b/css/metro-bootstrap.css
@@ -46,6 +46,21 @@ a:active,
   outline: 0;
 }
 
+    #flash-notice {
+      display: none;
+      text-align: center;
+      position: fixed;
+      z-index: 1200;
+      font-size: 11px;
+      color: #FFF;
+      margin: 0px auto;
+      padding: 4px;
+      max-width: 515px;
+      background: none repeat scroll 0% 0% rgba(0,0,0,0.8);
+      border: 2px solid #CCC;
+      border-radius: 7px;
+      width: 214px;
+    }
     #hc-mask {
       background-color: #000;
       background-image : url(../images/archway_assets1600x400.jpg);
