--- a/css/metro-bootstrap.css
+++ b/css/metro-bootstrap.css
@@ -1164,17 +1164,17 @@ a {
 }
 .metro a,
 .metro .link {
-  color: #2e92cf;
+  color: #00A255;
 }
 .metro a:hover,
 .metro .link:hover {
-  color: rgba(45, 173, 237, 0.8);
+  color: #0ACE71;
 }
 .metro a:focus,
 .metro .link:focus,
 .metro a:active,
 .metro .link:active {
-  color: rgba(45, 173, 237, 0.6);
+  color: #0ACE71;
 }
 .metro div,
 .metro span,
